fix refill block issue causing css breaks in recupero credenziali e registrazione, created custom config in base.js as full height dialog

--- a/html_blocchi/scss/base_partials/components/_popup.scss
+++ b/html_blocchi/scss/base_partials/components/_popup.scss
@@ -3,8 +3,8 @@
 .mfp-container,
 .mfp-wrap {
     height: calc(100% - 43px);
-    bottom: 0 !important;
-    top: auto !important;
+    bottom: 0 ;
+    top: auto ;
 }
 
 .mfp-close-btn-in .mfp-close {
